@startuml
title Диаграмма классов - Модуль управления пользователями

' ================ Сущности (Entities) ================

entity User <<Entity>> {
    +Id : int
    +Email : string
    +PasswordHash : string
    +Phone : string?
    +Name : string
    +LastName : string
    +CreatedAt : DateTime
    +UpdatedAt : DateTime?
    +RefreshToken : string?
    +RefreshTokenExpiryTime : DateTime?
}

' ================ Сервисы (Services) ================

class UsersService <<Service>> {
-_usersRepository: UsersRepository

+ GetAllUsersAsync()

}

' ================ Репозитории (Repositories) ================

class UsersRepository <<Repository>> {
-_dbContext: ApplicationDbContext

+ GetAllUsersAsync()

}

' ================ Интерфейсы (Interaces) ================

interface IUsersRepository <<Interface>> {
+ GetAllUsersAsync()
}

interface IUsersService <<Interface>> {
+ GetAllUsersAsync()
}


' ================ DTO КЛАССЫ (DTO) ================

class UserResponse <<Response>>
{
    +Id : int
    +Email : string
    +Phone : string?
    +Name : string
    +LastName : string
}

class UpdateUserRequest <<Request>>
{
    +Id : int
    +Email : string
    +Phone : string?
    +Name : string
    +LastName : string
    +UpdatedAt : DateTime
}


' ================ КОНТРОЛЛЕРЫ ================

class UsersController <<Controller>> {
    -_logger : ILogger<UserController>
    
    +GetUser(id) : Task<UserResponse>
    +GetAllUsers() : Task<List<UserResponse>>
    +UpdateUser(id, request) : Task<UserResponse>
}


' ================ КОНТЕКСТ БАЗЫ ДАННЫХ ================
class ApplicationDbContext <<Context>> {
    +Users : DbSet<User>
    
    +OnModelCreating(modelBuilder)
    +SaveChangesAsync() : Task<int>
    +UpdateTimestamps()
}

' ================ ОТНОШЕНИЯ МЕЖДУ КЛАССАМИ ================


UsersService ..|> IUsersService : implements
UsersRepository ..|> IUsersRepository : implements


IUsersService <-- UsersController : "использует как _usersService"

IUsersRepository <-- UsersService : "использует как _usersRepository"

UsersService ..> UserResponse: "преобразует User в UserResponse"

UsersRepository --> ApplicationDbContext: "использует как _dbContext"

UsersRepository --> User: "возвращает"

UsersController ..> UpdateUserRequest : "принимает в методах"

UsersController ..> UserResponse : "возвращает"

ApplicationDbContext --> User : "возвращает"

UpdateUserRequest ..> User : "обновляет"



@enduml
